fix: add Security BearerAuth
