# docs/swagger.yaml
@@ -1335,6 +1335,8 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - BearerAuth: []
       summary: Get all payment methods
       tags:
       - PaymentMethods
@@ -1368,6 +1370,8 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - BearerAuth: []
       summary: Create a new payment method
       tags:
       - PaymentMethods
@@ -1409,6 +1413,8 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - BearerAuth: []
       summary: Delete a payment method
       tags:
       - PaymentMethods
@@ -1453,6 +1459,8 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - BearerAuth: []
       summary: Update an existing payment method
       tags:
       - PaymentMethods
